- Clean URLs for local testing - Email instead of Twitter - Line spacing of post titles fixed

--- a/app.css
+++ b/app.css
@@ -56,7 +56,7 @@ html,body {
 
 body,
 textarea,
-input { font: 13px/20px 'OpenSans', sans-serif; }
+input { font: 13px 'OpenSans', sans-serif; }
 
 a {
   color: #526066;
